# data-projects

./: .gitignore  README.md
atac-realtime/: .gitignore  README.md  main.py  pyproject.toml
atac-realtime/scripts/: cron_install.sh  cron_remove.sh  ingest.py  ingest_once.py  load_duckdb.py  refresh_static.sh
ispra-environment/: .gitignore  README.md  index.html  pyproject.toml
ispra-environment/dbt/: dbt_project.yml
ispra-environment/dbt/macros/: parse_italian_number.sql
ispra-environment/dbt/models/marts/: fct_air_quality_by_region.sql  fct_land_consumption_ranking.sql  fct_waste_by_region.sql
ispra-environment/dbt/models/staging/: _sources.yml  stg_air_quality.sql  stg_land_consumption.sql  stg_waste.sql
ispra-environment/scripts/: ingest.py  load_duckdb.py  load_to_bq.py
polish-baby-names/: README.md  notebook.ipynb  pyproject.toml
