[project]
name = "ispra-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.4",
    "geopandas>=1.1.2",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.40.1",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "nbconvert>=7.17.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]
